# guimup-packaging

./: AUTHORS  COPYING  ChangeLog  FAQ  FAQ.txt  INSTALL  Makefile.am  Makefile.in  README  README.md  README.packaging  aclocal.m4  changelog  configure  configure.ac  description  quimup.pro  todo
.pc/: applied-patches
.pc/buildrules1.patch/: quimup.pro
debian/: README.Debian  README.source  changelog  control  copyright  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  guimup.1  guimup.cron.d.ex  guimup.default.ex  guimup.doc-base.EX  guimup.manpages  init.d.ex  install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  quimup.1  quimup.manpages  rules  watch  watch.ex
debian/patches/: add-desktop-launcher.patch  autoreconf.patch  buildrules.patch  buildrules1.patch  buildrules1.patch~  eol.patch  eol.patch~  fix-anjuta-doc-macro.patch  fix-docs-target.patch  installbin.patch  series
debian/source/: include-binaries
debian/usr/share/applications/: guimup.desktop  quimup.desktop
debian/usr/share/pixmaps/: guimup16.xpm  guimup32.xpm  guimup64.xpm  quimup16.xpm  quimup32.xpm  quimup64.xpm
grafix/: art_view.h  con_dis.h  con_ok.h  led_noconn.h  led_paused.h  led_playing.h  mn_icon24.h  mn_play.h  mn_playlist.h  mn_prev.h  mn_stop.h  nopic.h  onair.h  st_exit.h  st_noconn.h  st_play.h  st_playing.h  tr_artist.h  tr_play.h  tr_playlist.h  tr_pointleft.h  tr_pointrite.h  tr_prgbutn.h  tr_savbutn.h
grafix/Pics/: 0_CreateHeaders.sh
src/: Makefile  Makefile.Debug  Makefile.Release  Makefile.am  Makefile.in  gm_app.cc  gm_app.h  gm_browser.cc  gm_browser.h  gm_browser_pix.h  gm_commandlist.h  gm_config.cc  gm_config.h  gm_fixedlabel.cc  gm_fixedlabel.h  gm_itemlist.h  gm_library.cc  gm_library.h  gm_library_datatree.cc  gm_library_datatree.h  gm_library_datatree_pix.h  gm_library_mpdcom.cc  gm_library_mpdcom.h  gm_library_pix.h  gm_library_playlist.cc  gm_library_playlist.h  gm_library_playlist_pix.h  gm_libraryview.cc  gm_libraryview.h  gm_libraryview_pix.h  gm_modeid.h  gm_mpdcom.cc  gm_mpdcom.h  gm_player.cc  gm_player.h  gm_player_pix.h  gm_playlistview.cc  gm_playlistview.h  gm_playlistview_pix.h  gm_progressbar.cc  (+67 more)
src/grafix/: con_dis.h  con_ok.h  drag_playlist.h  drag_songs.h  led_noconn.h  led_paused.h  led_playing.h  led_stopped.h  menu_sub.h  menu_view.h  mn_config.h  mn_icon16.h  mn_icon24.h  mn_icon32.h  mn_icon48.h  mn_info_a.h  mn_info_b.h  mn_next.h  mn_pause.h  mn_play.h  mn_playlist.h  mn_prev.h  mn_sizer.h  mn_stop.h  mn_volslider.h  nopic.h  onair.h  st_conprofile.h  st_exit.h  st_idle.h  st_next.h  st_noconn.h  st_pause.h  st_paused.h  st_play.h  st_playing.h  st_prev.h  st_stop.h  st_stopped.h  tag_edit.h  (+38 more)
src/grafix/Pics/: 0_CreateHeaders.sh  0_README.txt
