dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(guimup, 0.3)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CXX






LT_INIT



PKG_CHECK_MODULES(GUIMUP, unique-3.0
gthread-2.0
libsoup-2.4
[gtkmm-3.0 libmpdclient])




AC_OUTPUT([
Makefile
src/Makefile

])
