## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
	$(GUIMUP_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = guimup

guimup_SOURCES = \
	main.cc \
	gm_player.h \
	gm_player.cc \
	gm_player_pix.h \
	libmpdclient.c \
	libmpdclient.h \
	gm_scroller.cc \
	gm_scroller.h \
	gm_config.h \
	gm_config.cc \
	gm_mpdcom.cc \
	gm_mpdcom.h \
	gm_library.h \
	gm_library.cc \
	gm_songlist.h \
	gm_library_mpdcom.cc \
	gm_library_mpdcom.h \
	gm_library_playlist.h \
	gm_library_playlist.cc \
	gm_library_datatree.cc \
	gm_library_datatree.h \
	gm_commandlist.h \
	gm_itemlist.h \
	gm_settings.h \
	gm_settings.cc \
	gm_settings_pix.h \
	gm_modeid.h \
	gm_library_pix.h \
	gm_library_playlist_pix.h \
	gm_library_datatree_pix.h \
	gm_treeview.h \
	gm_treeview.cc \
	gm_trayicon.h \
	gm_trayicon.cc \
	gm_slider.h \
	gm_slider.cc \
	str_pool.c \
	str_pool.h


guimup_LDFLAGS = 

guimup_LDADD = $(GUIMUP_LIBS)

EXTRA_DIST = 
