## Process this file with automake to produce Makefile.in

## Created by Anjuta



AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" \
	$(GUIMUP_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = guimup

guimup_SOURCES = \
	main.cc \
	gm_commandlist.h \
	gm_config.cc \
	gm_config.h \
	gm_itemlist.h \
	gm_modeid.h \
	gm_mpdcom.cc \
	gm_mpdcom.h \
	gm_player.cc \
	gm_player.h \
	gm_player_pix.h \
	gm_progressbar.cc \
	gm_progressbar.h \
	gm_scroller.cc \
	gm_scroller.h \
	gm_slider.cc \
	gm_slider.h \
	gm_trayicon.cc \
	gm_trayicon.h \
	gm_fixedlabel.cc \
	gm_fixedlabel.h \
	gm_songinfo.cc \
	gm_songinfo.h \
	gm_browser.cc \
	gm_browser.h \
	gm_playlistview.cc \
	gm_playlistview.h \
	gm_playlistview_pix.h \
	gm_treeview.cc \
	gm_treeview.h \
	gm_libraryview.cc \
	gm_libraryview.h \
	gm_browser_pix.h \
	gm_libraryview_pix.h \
	gm_settings.cc \
	gm_settings.h \
	gm_settings_pix.h

guimup_LDFLAGS = 

guimup_LDADD = $(GUIMUP_LIBS)



include_HEADERS = 
